--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Pet Adoption Centre</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -17,11 +17,12 @@
 <body>
   <div class="top-section-wrapper">
     <div class="top-section">
+
       <div class="actual-top-content">
         <h1>Find Your New Bestie</h1>
-        <p class="intro-text">The most amazing list of adoptable pets at your fingertips. Updated fresh daily.</p>
+        <p class="intro-text">The most amazing list of adoptable pets at your fingertips. Updated fresh daily!</p>
         <div class="intro-buttons">
-          <a href="#" class="our-btn utility-mr">View Pets</a>
+          <a href="#view-pets" class="our-btn utility-mr">View Pets</a>
           <a href="#" class="our-btn our-btn--outline">Manage Pets</a>
         </div>
 
@@ -110,7 +111,7 @@
     </div>
   </div>
 
-  <div class="page-section">
+  <div class="page-section" id="view-pets">
     <div class="page-section-inner">
       <h2 class="page-section-title">Meet Our Friends</h2>
       <div class="pet-filter">
