--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             </svg>
 
             <h2>Sunny Play</h2>
-            <p>Our center is located in beautiful Miami, and it&rsquo;s currently <span></span>°F at our pet playground.
+            <p>Our center is located in beautiful Miami, and it&rsquo;s currently <span
+                id="temperature-output"></span>°F at our pet playground.
             </p>
           </div>
 
@@ -185,7 +186,7 @@
     <p>&copy; 2023 Fake Adoption Center. All rights reserved.</p>
   </footer>
 
-</body>
+  <script src="main.js"></script>
 </body>
 
 </html>
