Added active styling to current filter button

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="page-section-inner">
       <h2 class="page-section-title">Meet Our Friends</h2>
       <div class="pet-filter">
-        <p>Show Me: <button>All Pets</button> <button>Only Dogs</button> <button>Only Cats</button></p>
+        <p>Show Me: <button class="active">All Pets</button> <button>Only Dogs</button> <button>Only Cats</button></p>
       </div>
 
       <div class="list-of-pets"></div>
@@ -144,5 +144,6 @@
 
   <script src="main.js"></script>
 </body>
+<!-- Command forward slash is a shortcut for adding comments -->
 
 </html>
